--- a/index.html
+++ b/index.html
@@ -5,63 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 </head>
 <body>
+  <header class="menu"> 
+    <img src="/images/logo.svg" alt="icon-logo">
+    <nav>
+        <a href="#">Features</a>
+        <a href="#">Team</a>
+        <a href="#">sign in</a>   
+    </nav>
+  </header>
+  <main>
+    <d class="beginning">
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p>Fylo stores your most important files in one secure location. 
+      Access them wherever you need, share and collaborate with friends, 
+      family, and co-workers.</p>
+      <input type="email" placeholder="enter your email...">
+      <button>Get Started</button>
+    </d iv>
+      <img src="/images/illustration-1.svg" alt="img_1" class="img__primary">
+  </main>
 
-  Features
-  Team
-  Sign In
+  <aside>
+      <div class="info">
+        <h2>Stay productive, wherever you are</h2>
 
-  All your files in one secure location, accessible anywhere.
+        <p>Never let location be an issue when accessing your files. Fylo has you
+        covered for all of your file storage needs.</p>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+        <p> Securely share files and folders with friends, family and colleagues for 
+        live collaboration. No email attachments required!</p>
+  
+        <a href="#">See how Fylo works <img src="/images/icon-arrow.svg" alt="icon-arrow"></a>
+  
+        <div class="card__comment">
+          <img src="/images/icon-quotes.svg" alt="icon-quotes" width="20px">
+          <p> Fylo has improved our team productivity by an order of magnitude. Since 
+          making the switch our team has become a well-oiled collaboration machine.</p>
+      
+          <div class="info__comment">
+            <img src="/images/avatar-testimonial.jpg" alt="icon-quotes">
+            <p>
+              <span>Kyle Burton</span>
+            Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+      <img src="/images/illustration-2.svg" alt="img__2" class="img__secundary">
+  </aside>
+ 
 
-  Get Started
+<article>
+  <div>
+    <h3>Get early access today</h3>
 
-  Stay productive, wherever you are
+    <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+    If you have any questions, our support team would be happy to help you.</p>
+  </div>
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+    <div class="email">
+      <input type="text" placeholder="email@example.com">
+      <button>Get Started For Free</button>
+    </div>
+</article>
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
+<footer>
+  <div>
+    <p>Phone: +1-543-123-4567</p>
+    <p>example@fylo.com</p>
+  </div>
 
-  See how Fylo works
+  <div>
+    <p>About Usone</p>
+    <p>Jobs</p>
+    <p>Press</p>
+    <p>Blog</p>
+  </div>
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+  <div>
+    <p>Contact Us</p>
+    <p>Terms</p>
+    <p>Privacy</p>
+  </div>
+</footer>
 
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
