--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 </head>
 <body>
-  <header class="menu"> 
+  <header> 
     <img src="/images/logo.svg" alt="icon-logo">
     <nav>
         <a href="#">Features</a>
@@ -18,23 +18,23 @@
     </nav>
   </header>
   <main>
-    <d class="beginning">
+    <div class="beginning">
       <h1>All your files in one secure location, accessible anywhere.</h1>
       <p>Fylo stores your most important files in one secure location. 
       Access them wherever you need, share and collaborate with friends, 
       family, and co-workers.</p>
       <input type="email" placeholder="enter your email...">
       <button>Get Started</button>
-    </d iv>
+    </div>
       <img src="/images/illustration-1.svg" alt="img_1" class="img__primary">
   </main>
 
-  <aside>
-      <div class="info">
+  <section>
+      <div>
         <h2>Stay productive, wherever you are</h2>
 
         <p>Never let location be an issue when accessing your files. Fylo has you
-        covered for all of your file storage needs.</p>
+         covered for all of your file storage needs.</p>
 
         <p> Securely share files and folders with friends, family and colleagues for 
         live collaboration. No email attachments required!</p>
@@ -55,7 +55,7 @@
         </div>
       </div>
       <img src="/images/illustration-2.svg" alt="img__2" class="img__secundary">
-  </aside>
+  </section>
  
 
 <article>
