--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
 
   <section>
-      <div>
+      <div class="beginning">
         <h2>Stay productive, wherever you are</h2>
 
         <p>Never let location be an issue when accessing your files. Fylo has you
@@ -59,7 +59,7 @@
  
 
 <article>
-  <div>
+  <div class="edit__info">
     <h3>Get early access today</h3>
 
     <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
@@ -74,6 +74,7 @@
 
 <footer>
   <div>
+    <img src="/images/logo-edit.svg"  alt="icon-logo" fill="red">
     <p>Phone: +1-543-123-4567</p>
     <p>example@fylo.com</p>
   </div>
